# Agrobot-2.0

./: .gitignore  README.md  agrobot.keystore  controller.py  readme.md
X11/xorg.conf.d/: 00-keyboard.conf
agrobot/: Controller.py
agrobot/complements/: poweManager.py
agrobot/movement/: Movement.py
agrobot/runnables/: run_ROBOT_NO_SENSORS.sh
comunication/: comunication.py  webServer.py
coronaKiller/: package-lock.json  package.json
doc/arduino/: doc_config
doc/raspberry/: doc_launcherVariables_py.md
docs/: CNAME  doc_config  index.html
docs/testes/: erros.md  (+1 more)
install/: 99-usb-serial.rules  README.md  config.json  instalador.py  install_ros_code.py  install_xyz_sensor.sh  log  reinstall_ros_code.py  uninstall_ros_code.py
modules/: controlRobot.py  logs.py
nbproject/: project.properties  project.xml
src/catkin_ws/src/agrobot/: CMakeLists.txt  package.xml
src/catkin_ws/src/agrobot/launch/: kill.launch  run.launch
src/catkin_ws/src/agrobot/src/: Readme.md  config_launcher.py  controller.py
src/catkin_ws/src/agrobot/src/comunication/: command_priority_decider.py  command_standardizer.py  web_server.py
src/catkin_ws/src/agrobot/src/config/: launch.cfg  launch_pc.cfg  mode.cfg
src/catkin_ws/src/agrobot/src/logs/: .gitignore
src/catkin_ws/src/agrobot/src/modules/: command_assembler.py  control_mini_robot.py  control_robot.py  logs.py  manual_control.py  relay.py
src/catkin_ws/src/agrobot/src/runnables/: kill.py
src/catkin_ws/src/agrobot/src/tests/controller_py/: config.json  launch_modules.py
src/catkin_ws/src/agrobot/src/utils/: log.py
(+562 files in other folders)
